Fix broken title on small screens
just add 'display: inline-block'

--- a/css/typing.css
+++ b/css/typing.css
@@ -38,6 +38,7 @@
   margin-top: 45px;
 }
 .typing-header-title {
+  display: inline-block;
   cursor: pointer;
   background-color: rgba(100, 199, 158, 0.3);
   border-radius: 20px;
